# Forensic-Council

./: $null  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  ANALYSIS_AND_SETUP.md  AUDIT_PROGRESS.md  AUDIT_REPORT.md  App Fixing.md  CHANGELOG.md  CLAUDE.md  CODE_AUDIT_FIXES_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  Code Overhaul.md  DOCS_INDEX.md  FC_Frontend_Audit_Implementation_Plan.md  FC_REDESIGN_PLAN.md  FIXES_APPLIED.txt  Forensic-Council-Production-Readiness.docx  LICENSE  MASTER_FIX_Magnum.md  Makefile  PROJECT_STRUCTURE.md  README.md  TESTS.md  agents_ruff.txt  ai_context.md  docker-compose.frontend-dev.yml  docker-compose.infra.yml  docker-compose.prod.yml  docker-compose.yml  e2e_test.py  forensic-council-1.0-roadmap.docx  manage.ps1  manage.sh  (+7 more)
apps/api/: .dockerignore  Dockerfile  README.md  baseline_results.txt  models.lock.json  pyproject.toml  worker.py
apps/api/agents/: __init__.py  _context_utils.py  agent1_image.py  agent2_audio.py  agent3_object.py  agent4_video.py  agent5_metadata.py  agent_severity.py  arbiter.py  arbiter_narrative.py  arbiter_verdict.py  base_agent.py  reflection.py  reflection_models.py  tool_handlers.py
apps/api/api/: __init__.py  constants.py  main.py  schemas.py
apps/api/config/: models.lock.json  task_tool_overrides.yaml
apps/api/core/: __init__.py  _bcrypt_shim.py  adversarial.py  agent_registry.py  agents.py  audit_logger.py  auth.py  calibration.py  circuit_breaker.py  config.py  context_utils.py  cross_modal_fusion.py  custody_chain.py  custody_logger.py  episodic_memory.py  evidence.py  exceptions.py  forensic_policy.py  forensics.py  gemini_client.py  grounding.py  hitl.py  image_utils.py  inference_client.py  inter_agent_bus.py  llm_client.py  logging.py  media_kind.py  migrations.py  mime_registry.py  ml_subprocess.py  ml_tool_worker.py  model_registry.py  monitoring.py  observability.py  priorities.py  quota_meter.py  rate_limit.py  rate_limiting.py  react_loop.py  (+14 more)
apps/api/orchestration/: __init__.py  agent_factory.py  investigation_queue.py  investigation_runner.py  pipeline.py  pipeline_enrichment.py  pipeline_phases.py  pipeline_registry.py  session_manager.py  signal_bus.py  worker.py
apps/api/probes/: model_cache_check.py  model_pre_download.py
apps/api/reports/: __init__.py  report_renderer.py
apps/api/scripts/: backup_db.py  cleanup_storage.py  docker_entrypoint.sh  e2e_smoke_test.py  e2e_test_inline.py  enforce_retention.py  hash_password.py  init_db.py  model_cache_check.py  model_pre_download.py  probe_deep_agent.py  probe_initial_agent.py  probe_initial_arbiter.py  probe_pipeline_live.py  run_api.py  run_stress_test.py  run_worker.py  setup.py  smoke_test.sh  test_agent1_full.py  test_agent2_full.py  test_agent3_full.py  test_groq_key.py  test_login.py  train_calibration.py  validate_ml_tools.py  verify_gemini.py  verify_groq.py  verify_llm_keys.py  wal_cleanup.py  worker_healthcheck.py
apps/api/tests/: conftest.py
apps/api/tools/: __init__.py  audio_tools.py  clip_utils.py  image_tools.py  mediainfo_tools.py  metadata_tools.py  model_cache.py  ocr_tools.py  video_tools.py
backend/: .dockerignore  .env.example  Dockerfile  README.md  create_fixture.py  e2e_test.py  force_create_table.py  import_error.txt  master.py  master_out.txt  out.txt  pyproject.toml  pytest.ini  test_exif.py  test_import.py  test_middleware.py  test_pg.py  test_pg_diag.py  test_storage.py  worker.py
backend/agents/: __init__.py  agent1_image.py  agent2_audio.py  agent3_object.py  agent4_video.py  agent5_metadata.py  arbiter.py  base_agent.py
backend/api/: main.py  schemas.py
backend/api/routes/: _rate_limiting.py  _session_state.py  auth.py  hitl.py  investigation.py  investigation_fixed.py  metrics.py  sessions.py  sse.py
backend/config/: task_tool_overrides.yaml
backend/core/: __init__.py  adversarial.py  audit_logger.py  auth.py  calibration.py  circuit_breaker.py  config.py  cross_modal_fusion.py  custody_logger.py  episodic_memory.py  evidence.py  exceptions.py  gemini_client.py  image_utils.py  inter_agent_bus.py  llm_client.py  logging.py  migrations.py  ml_subprocess.py  ml_tool_worker.py  model_registry.py  observability.py  react_loop.py  retry.py  session_persistence.py  severity.py  signing.py  structured_logging.py  task_tool_config.py  tool_registry.py  working_memory.py
backend/core/forensics/: ela.py  frequency.py  noise.py  sift.py  splicing.py
backend/infra/: __init__.py  evidence_store.py  postgres_client.py  qdrant_client.py  redis_client.py  storage.py
backend/orchestration/: __init__.py  investigation_queue.py  pipeline.py  session_manager.py
backend/reports/: __init__.py  report_renderer.py
backend/scripts/: __init__.py  cleanup_storage.py  debug_matching.py  docker_entrypoint.sh  hash_demo.py  hash_password.py  init_db.py  model_cache_check.py  model_pre_download.py  run_api.py  run_stress_test.py  run_worker.py  smoke_test.sh  test_exif_sync.py  test_gemini.py  test_groq_key.py  train_calibration.py  verify_gemini.py  verify_groq.py
backend/scripts/ml_tools/: anomaly_classifier.py  audio_splice_detector.py  copy_move_detector.py  deepfake_frequency.py  ela_anomaly_classifier.py  lighting_analyzer.py  metadata_anomaly_scorer.py  noise_fingerprint.py  splicing_detector.py
backend/storage/keys/: Agent1.pem  Agent2.pem  Agent3.pem  Agent4.pem  Agent5.pem  Arbiter.pem  INVESTIGATOR-1.pem  TestAgent.pem  agent.pem  agent_1.pem  agent_2.pem  new_agent.pem  test_agent.pem
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: test_api_routes.py
backend/tests/test_agents/: __init__.py  test_arbiter.py  test_base_agent.py
backend/tests/test_api/: __init__.py  test_investigation.py
backend/tests/test_core/: __init__.py  test_adversarial.py  test_calibration.py  test_custody_logger.py  test_episodic_memory.py  test_react_loop.py  (+4 more)
backend/tools/: __init__.py  audio_tools.py  clip_utils.py  image_tools.py  mediainfo_tools.py  metadata_tools.py  model_cache.py  ocr_tools.py  video_tools.py
(+647 files in other folders)
