[project]
name = "forensic_council"
version = "0.1.0"
description = "Multi-Agent Forensic Evidence Analysis System"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Forensic Council Team" }
]

dependencies = [
    # Core
    "langgraph>=0.2",
    "redis[asyncio]>=5.0",
    "qdrant-client[async]>=1.7",
    "asyncpg>=0.29",
    "pydantic>=2",
    "pydantic-settings>=2",
    "cryptography>=42",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    # API Server
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "websockets>=13.0",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    # Image processing tools
    "Pillow>=10.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "piexif>=1.1",
    "imagehash>=4.3",
    "pytesseract>=0.3.10",
    "opencv-contrib-python>=4.9",    # SIFT copy-move detection
    "scikit-image>=0.22",             # Shadow/lighting Hough transform
    "stegano>=0.11",                  # LSB steganography decode
    "hachoir>=3.2",                   # Binary container metadata parser
    # Metadata tools
    "timezonefinder>=6.2",
    "pyexiftool>=0.5",
    "geopy>=2.4",
    "astral>=3.2",                    # Astronomical validation
    # Audio processing tools
    "librosa>=0.10",
    "soundfile>=0.12",
    "pyannote.audio>=3.1",            # Speaker diarization
    "speechbrain>=1.0",               # Anti-spoofing AASIST
    "praat-parselmouth>=0.4",         # Gold-standard prosody (F0, jitter, shimmer)
    "moviepy>=1.0,<2.0",                   # AV sync via video+audio correlation
    "torch>=2.2",                     # PyTorch for ML models
    "torchvision>=0.17",
    "torchaudio>=2.2",                # PyTorch audio support
    # Video processing tools
    # "opencv-python-headless>=4.8",  # REMOVED: conflicts with opencv-contrib-python
    "deepface>=0.0.93",               # Face-swap via embedding discontinuity
    "ultralytics>=8.2",               # YOLOv8 real object detection
    "open-clip-torch>=2.24",          # CLIP zero-shot contextual analysis
    # ML tools
    "scikit-learn>=1.4",
    "transformers>=4.35",             # HuggingFace transformers
    "accelerate>=0.25",               # Model acceleration
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "regression: marks tests as regression tests (deselect with -m 'not regression')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["core", "infra", "agents", "tools", "orchestration"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.hatch.build.targets.wheel]
packages = ["core", "infra", "agents", "tools", "orchestration", "reports", "api"]
